<?xml version="1.0"?>
<package>
  <name>spectrogram_paint_ros</name>
  <version>0.0.1</version>
  <description>Create sounds from image data
  </description>

  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>

  <license>BSD 3.0</license>

  <url type="website">https://github.com/lucasw/spectrogram_paint</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <!-- nodelet plugin="${prefix}/nodelet_spectrogram_paint_ros.xml" /-->
  </export>

</package>
